--- a/translatePapier.tex
+++ b/translatePapier.tex
@@ -541,11 +541,11 @@ Le fichier d'explication décrit comment lancer des démonstrations basiques. Le
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Software example: learning a 1-DOF primitive}
+\section{Exemple fournis par le logiciel : apprentissage d'une primitive à une dimension}
 \label{sec:example1DOF}
-\rev{In this section, we present the use of the software to learn ProMPs in a simple case of 1-DOF primitive. This example only uses the \textit{MatlabProgram} folder, composed of:}
+Cette section présente comment utiliser le logiciel afin d'apprendre une \textit{ProMP} à une dimension. Cette exemple necessite uniquement l'utilisataion du dossier \textit{MatlabProgram}, composé de :
 \begin{itemize}
-\item A sub-folder called ``Data'', where \rev{there are trajectory sets used to learn movement primitives. These trajectories are stored in text files with the following information}:
+\item Un sous dossier nommé  ``Data'', où un ensemble de trajectoire permet d'apprendre des \textit{ProMPs}. Ces trajectoires sont enregistrées dans des fichier textes, contenant les informations suivantes :
 %that
 %\sout{there are some samples of trajectories in text files. These text files} }can be organize in various ways:
 \begin{itemize}
